# metasurfai-public-api

./: Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  vercel.json
src/: main.rs
src/application/: config.rs  mod.rs
src/application/router/: mod.rs
src/application/router/handlers/: ads_handler.rs  auth_handler.rs  billboards_handler.rs  mod.rs  profile_handler.rs
src/application/router/middlewares/: auth.rs  jwt.rs  mod.rs
src/domain/: error.rs
src/domain/model/: ads.rs  mod.rs  profile.rs  user.rs
src/domain/service/: ads_service.rs  auth_service.rs  billboard_service.rs  mod.rs  profile_service.rs  user_service.rs
src/infrastructure/repository/: ads_repository.rs  billboard_repo.rs  mod.rs  mongo_repository.rs  mongodb_repo.rs  profile_repository.rs  user_repository.rs
