[package]
name = "metasurfai-public-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6" # Web framework
tokio = { version = "1.34", features = ["full"] } # Async runtime
tower = "0.4" # Middleware and utilities for Axum
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON handling
thiserror = "1.0" # Custom error types
jsonwebtoken = "7.2.0" # JWT handling
hyper = "0.14"
