[package]
name = "metasurfai-public-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6" 
hyper = "0.14"
jsonwebtoken = "7.2.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1.34", features = ["full"] } 
tower = "0.4" 
tower-http = { version = "0.4.0", features = ["cors"] }
thiserror = "1.0" 
rand = "0.8"
